# backend

./: Dockerfile  deployment.yaml  pyproject.toml
.github/workflows/: build.yaml
backend/: .env  db.sqlite3  pyproject.toml  tox.ini
backend/api/: models.py  serializers.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
chart/: values.yaml
